--- a/s01/evolution-analysis.Rmd
+++ b/s01/evolution-analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Study 03: Bouncy Castle Evolution and Breaking Changes"
+title: "Bouncy Castle Evolution and Breaking Changes"
 author: "Rodrigo Bonifácio, Stefan Krüger, Krishna Narasimhan, Eric Bodden, and Mira Mezini "
 date: "March, 2021"
 output:
