--- a/artifact.Rmd
+++ b/artifact.Rmd
@@ -217,7 +217,7 @@ tool](https://github.com/CROSSINGTUD/CryptoAnalysis).
 ### Scripts 
 
    * [RMD](s03/violation-analysis.Rmd)
-   * [HTML](hs03/violation-analysis.html)
+   * [HTML](s03/violation-analysis.html)
 
 # Live version of this package 
 
